# firecore_oneflow

./: .gitignore  README.md  ddp.py  pyproject.toml
examples/cifar10/: config.py  train.py
firecore_oneflow/datasets/: fake.py
firecore_oneflow/hooks/: __init__.py  base.py  inference.py  text.py  training.py
firecore_oneflow/losses/: __init__.py  base.py
firecore_oneflow/metrics/: accuracy.py  average.py  base.py  collection.py  functional.py
firecore_oneflow/model/: base.py  builder.py  train_graph.py
firecore_oneflow/module/: builder.py
firecore_oneflow/optim/: builder.py
firecore_oneflow/runners/: base.py  batch_processor.py  epoch_based.py
tests/datasets/: test_fake.py
